# syncplay

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.base.json  vercel.json
apps/api/: .env.example  Dockerfile  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/activity/: activity.controller.ts  activity.module.ts  activity.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/config/: configuration.ts  cors.ts
apps/api/src/devices/: devices.controller.ts  devices.module.ts  devices.service.ts
apps/api/src/email/: email.service.ts
apps/api/src/games/: games.service.ts
apps/api/src/realtime/: realtime.gateway.ts  realtime.module.ts  redis-io.adapter.ts
apps/api/src/redis/: redis.module.ts  redis.service.ts
apps/api/src/rooms/: room-presence.service.ts  rooms.controller.ts  rooms.module.ts  rooms.service.ts
apps/api/src/sync/: sync.service.spec.ts  sync.service.ts
apps/api/src/voice/: voice.service.ts
apps/api/test/: app.e2e-spec.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: Dockerfile  capacitor.config.ts  next.config.capacitor.js  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  (+9 more)
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GO_LIVE.md  SOCKET_EVENTS.md
infra/docker/: docker-compose.yml
infra/docker/nginx/: nginx.conf
(+45 files in other folders)
