[package]
name = "orbit-desktop"
version = "0.1.0"
description = "Orbit desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "orbit-desktop"
path = "src/main.rs"
